[package]
name = "gmec"
version = "0.0.2"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Gabriel Lee Anderson <gla.ander@gmail.com>"]
description = "Gabe's Monolithic Everything Crate - A library for all your (my) general-purpose needs"
repository = "https://github.com/gabe-lee/gmec.git"

[dependencies]
